[package]
name = "my_proc_marco"
version = "0.0.0"
authors = ["Aleksandar Markovic <amarkovic29@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.27"
proc-macro2 = "1.0.56"
syn = {version = "2.0.15", features = ["full"]}

